--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,7 +1,24 @@
+:root {
+  --nav-bg-clr: #53a62d;
+  --nav-font-clr: #424242;
+  --store-name-clr: #f2f2f2;
+}
+
 nav {
   box-sizing: border-box;
-  width: 100vw;
+  width: 100%;
+  height: 10vh;
+  padding-left: 1rem;
   display: flex;
+  align-items: center;
+  background-color: var(--nav-bg-clr);
+  color: var(--nav-font-clr);
+}
+
+.store-name {
+  font-size: 2rem;
+  font-weight: 600;
+  color: var(--store-name-clr);
 }
 
 .nav-list {
@@ -13,6 +30,24 @@ nav {
 
 a {
   text-decoration: none;
-  color: #424242;
+  color: var(--nav-font-clr);
   margin: 1rem;
+  font-size: 1.2rem;
+  transition: 500ms;
+}
+
+a:hover {
+  color: var(--store-name-clr);
+}
+
+.nav-elem {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.github-icon {
+  height: 2rem;
+  padding-right: 1rem;
 }
