Style item cards

--- a/src/styles/Store.css
+++ b/src/styles/Store.css
@@ -1,6 +1,8 @@
 .products-cont {
   box-sizing: border-box;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   background-color: #707365;
 }
