--- a/src/styles/ItemCards.css
+++ b/src/styles/ItemCards.css
@@ -1,10 +1,55 @@
 .item-card {
   box-sizing: border-box;
-  width: 200px;
+  width: 300px;
+  height: 400px;
   margin: 1rem;
+  padding: 0.5rem;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  border: 2px solid #424242;
+  border-radius: 1rem;
+  -webkit-box-shadow: 0px 0px 22px -3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 22px -3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 22px -3px rgba(0, 0, 0, 0.75);
+}
+
+.title {
+  font-size: large;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .product-img {
-  width: 150px;
+  display: block;
+  max-width: 150px;
+  max-height: 150px;
+  width: auto;
+  height: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.price {
+  font-size: 1.2rem;
+}
+
+.purchase-actions {
+  margin-top: auto;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+#quantity-input {
+  width: 4rem;
+  margin-right: 0.5rem;
+}
+
+.add-to-cart-btn {
+  margin-left: 0.5rem;
 }
